SUI 107, last page is not showing issue

--- a/css/profile.css
+++ b/css/profile.css
@@ -129,6 +129,7 @@
 }
 
 .modalcontent {
+    top:0;
     margin-top: 0;
     position: absolute !important;
     border-radius: 10px;
